--- a/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
+++ b/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
@@ -17,7 +17,7 @@ vignette: >
 
 ### a) Goals and Background
 
-**Goals**: The goal of this worked example is for you to become familiar with creating and analyzing landscape genetic hypotheses using maximum likelihood population effects (MLPE; Van Strien et al. 2012) and information theory. WIth this approach, we focus on evaluating evidence for the influence of landscape on link-based metrics (i.e. genetic distance). Incorporating node-based effects (i.e. pond size, etc.) will be covered in the gravity modeling lab. 
+**Goals**: The goal of this worked example is for you to become familiar with creating and analyzing landscape genetic hypotheses using maximum likelihood population effect models (MLPE; Van Strien et al. 2012) and information theory. With this approach, we focus on evaluating evidence for the influence of the (intervening) landscape on link-based metrics (i.e. genetic distance). Incorporating node-based effects (i.e. pond size, etc.) will be covered in the gravity modeling lab. 
 
 We will re-analyze a dataset from Goldberg and Waits 2010 using a maximum likelihood population effect model (MLPE). 
 
@@ -76,13 +76,18 @@ str(CSFdata)
 
 The response Y in our MLPE models will be `logDc.km`, the genetic distance per geographic distance, log transformed to meet normality assumptions. 
 
+**NOTE HW: Please explain why you ar using genetic distance per geographic distance, not just genetic distance. Is this  away of building IBD into the null model? What does it mean for how ecologial distances need to be scaled, i.e., do they need to be expressed per km as well? Would this make sense if it is compositional data, such as percent forest along a link?**
+
 For this exercise, you will test 5 alternative hypotheses. At the end, you will be invited to create your own hypotheses from these variables and test support for them.
+
+**NOTE HW: Are this 48 links retained from a graph? There are 20 sites, I believe, but not all links are represented. How about adding a map?**
+
 
 ## 2. Fitting candidate models
 
 ### a) Alternative hypotheses
 
-In information theory, we evaluate evidence for a candidate set of hypotheses that we develop from the literature and theory. Although it is mathematically possible (and often practiced) to fit all possible combinations of input variables, that approach is not consistant with the methodology (see Burnham and Anderson 2002 Chapter 8, the reading for this unit, for more detail). Here, your "a priori"" set of hypotheses (as in the Week 12 Conceptual Exercise) is as follows:
+In information theory, we evaluate evidence for a candidate set of hypotheses that we develop from the literature and theory. Although it is mathematically possible (and often practiced) to fit all possible combinations of input variables, that approach is not consistent with the methodology (see Burnham and Anderson 2002 Chapter 8, the reading for this unit, for more detail). Here, your "a priori"" set of hypotheses (as in the Week 12 Conceptual Exercise) is as follows:
 
 1.	**Full model**: solarinso, forest, ag, shrub, dev
 2.	**Landcover model**: ag, shrub, forest, and dev
@@ -91,21 +96,24 @@ In information theory, we evaluate evidence for a candidate set of hypotheses th
 5.	**Historical model**: soils, slope, solarinso
 
 ### b) Prepare for model fitting
-Because link data are not independant (i.e. the genetic diversity at node 1 influences both the node1/node2 genetic distance and that from node1/node3, etc.), we need to develop a set of random effects to account for this dependancy, so that we seperate the pattern due to this covariance from the signal of landscape influence on genetic distance. We start by creating matrices from the pop1 and pop2 variables:
 
-Create the Zl and ZZ matrices:
+Because link data are not independent (i.e. the genetic diversity at node 1 influences both the node1/node2 genetic distance and that from node1/node3, etc.), we need to develop a set of random effects to account for this dependency, so that we seperate the pattern due to this covariance from the signal of landscape influence on genetic distance. We start by creating matrices from the `pop1` and `pop2` variables:
+
+Create the `Zl` and `ZZ` matrices:
 
 ```{r}
-Zl <- lapply(c("pop1","pop2"), function(nm) Matrix:::fac2sparse(CSFdata[[nm]],
-                               "d", drop=FALSE))
+Zl <- lapply(c("pop1","pop2"), function(nm) 
+  Matrix:::fac2sparse(CSFdata[[nm]], "d", drop=FALSE))
 ZZ <- Reduce("+", Zl[-1], Zl[[1]])
 ```
 
-Now we can fit an lmer model to the data. 
+Note: The list 'Zl' contains two sparse matrices, one for the 'from' node in 'pop1' and one for the 'to' node in 'pop2'. Each sparse matrix has 20 rows (for the 20 populations) and 48 columns (for the 48 links). Each column has a single value of '1' that indicates the 'from' or 'to' population of the corresponding link. The matrix 'ZZ' is again a sparse matrix that is the sum of the two sparse matrices in 'Zl'. Each column thus has two values of '1', one for the 'from' and one for the 'to' node.
+
+Now we can fit an `lmer` model (linear mixed model; see Week 6 videos) to the data. 
 
 ```{r}
-mod1 <- lme4::lFormula(logDc.km ~ solarinso + forest + ag + shrub + dev + (1|pop1), 
-                 data = CSFdata, REML = TRUE)
+mod1 <- lme4::lFormula(logDc.km ~ solarinso + forest + ag + shrub + 
+                       dev + (1|pop1), data = CSFdata, REML = TRUE)
 ```
 
 At this point an error message appears: "Warning message: Some predictor variables are on very different scales: consider rescaling". 
@@ -116,10 +124,12 @@ Which variable is causing this problem? To check, get R to show you the first fe
 head(CSFdata)
 ```
 
-One of these variables is a lot larger than the others, but has a small range. This often happens with variables such as easting and can cause issues for model fit. The common solution is to z-transform (standardize) the data, which is conveniently done in R using the `scale` function:
+One of these variables is a lot larger than the others, but has a small range. This often happens with variables such as easting and can cause issues for model fit. The common solution is to z-transform (standardize) the data, which is conveniently done in R using the `scale` function.
+
+Note: we could use the scale function without specifying the arguments 'center' or 'scale', as both are 'TRUE' by default. The argument 'center=TRUE' centers the variable by subtracting the mean, the 'scale=TRUE' argument rescales the variables to unit variance by dividing each value by the standard deviation. The resulting variable has a mean of zero and a standard deviation and variance of one. 
 
 ```{r}
-solarinsoz <- scale(CSFdata$solarinso)
+solarinsoz <- scale(CSFdata$solarinso, center=TRUE, scale=TRUE)
 ```
 
 We then can attach these data back to our dataframe and check to make sure this worked:
@@ -148,37 +158,51 @@ Numbers less than 10, or 3, or 4, depending on who you ask, are considered to no
 usdm::vif(cbind(CSF.df, grass=CSFdata$grass))
 ```
 
+**NOTE HW: I added the text and code below, though I see now that you meant this to be a question at the end. As we don't have a video to introduce the concepts for the lab, maybe a bit more explanation would be helpful?**
+
+Why is this? The variables 'forest', 'dev', 'shrub', 'ag' and 'grass' together cover almost all land cover types in the study area. Each is measured as percent area, and together, they make up 100% or close to 100% of the land cover types along each link. Thus if we know e.g. that all 'forest', 'dev', 'shrub' and 'ag' together cover 80% along a link, then it is a good bet that 'grass' will cover the remaining 20%. 
+
+Therefore, with composition data, we need to omit one variable to avoid multi-collinearity (where a variable is a linear combination of other variables), even though the pairwise correlations may be low. For example, there the variable 'grass' showed relatively low correlations with the other variables:
+
+```{r}
+cor(CSF.df, CSFdata$grass)
+```
+
 ### c) Fit all five models
 
 Now we have to remake the modeling objects with our new and improved data frame, but referring to our z-transformed data (thanks to Martin Van Strien and Helene Wagner for the base model code):
 
 ```{r}
-Zl <- lapply(c("pop1","pop2"), function(nm) Matrix:::fac2sparse(CSFdata[[nm]],
-                               "d", drop=FALSE))
+Zl <- lapply(c("pop1","pop2"), function(nm) 
+  Matrix:::fac2sparse(CSFdata[[nm]], "d", drop=FALSE))
 ZZ <- Reduce("+", Zl[-1], Zl[[1]])
 ```
 
 Fit an lmer model to the data:
 
 ```{r}
-mod_1 <- lme4::lFormula(logDc.km ~ solarinsoz + forest + ag + shrub + dev + (1|pop1), 
-                 data = CSFdata, REML = TRUE)
+mod_1 <- lme4::lFormula(logDc.km ~ solarinsoz + forest + ag + shrub + 
+                        dev + (1|pop1), data = CSFdata, REML = TRUE)
 ```
 
 In the fitted model replace Zt slot:
+
+**NOTE HW: What is the Zt slot?**
 
 ```{r}
 mod_1$reTrms$Zt <- ZZ
 ```
 
-Refit the model:
+Refit the model (this involves a few steps of optimization starting from the previously fitted model `mod_1`):
 
 ```{r}
 dfun <- do.call(lme4::mkLmerDevfun, mod_1)
 opt <- lme4::optimizeLmer(dfun)
-mod1 <- lme4::mkMerMod(environment(dfun), opt, mod_1$reTrms,fr = mod_1$fr)
+mod1 <- lme4::mkMerMod(environment(dfun), opt, mod_1$reTrms, fr = mod_1$fr)
 summary(mod1)
 ```
+
+**NOTE HW: Can you please explain the output? How would we get p-values, or if we don't do that, why not? Would we need to refit with ML? Or explain that we will use a CI approach later to identify which variables have a 'significant' effect?**
 
 This is the fullest model in our dataset (although our models are not completely nested), so we will take a look at the residuals:
 
@@ -190,25 +214,28 @@ Residuals are centered around zero and do not show large groupings or patterns, 
 
 There are many more checks that can be done at this point (referenced in the lecture), but for now we are going to leave evaluating model fit at this and fit the other models.
 
-Now we will make a function (called MPLE) to fit the rest of our models, so that we are not typing the same code over and over (which causes errors and long code that is difficult to navigate):
+**NOTE HW: I think it would be useful to have some more plots here to have the code, as 'LandGenCourse' will be available independently from the DGS lectures?**
+
+Now we will make a function (called MPLE) to fit the rest of our models, so that we are not typing the same code over and over (which causes errors and long code that is difficult to navigate or update):
 
 
 ```{r}
-MLPE <- function(variables, data) {mod2 <- lme4::lFormula(variables, data = data, REML = TRUE)
-dfun <- do.call(lme4::mkLmerDevfun, mod2)
-opt <- lme4::optimizeLmer(dfun)
-mod_2 <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-mod2$reTrms$Zt <- ZZ
+MLPE <- function(variables, data) {
+  mod2 <- lme4::lFormula(variables, data = data, REML = TRUE)
+  dfun <- do.call(lme4::mkLmerDevfun, mod2)
+  opt <- lme4::optimizeLmer(dfun)
+  mod_2 <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
+  mod2$reTrms$Zt <- ZZ
 
 # Refit the model
-dfun <- do.call(lme4::mkLmerDevfun, mod2)
-opt <- lme4::optimizeLmer(dfun)
-modelout <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-return(modelout)
+  dfun <- do.call(lme4::mkLmerDevfun, mod2)
+  opt <- lme4::optimizeLmer(dfun)
+  modelout <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
+  return(modelout)
 }
 ```
 
-To use this function, we define variables (the model as we want it to run) and data (the object that contains our data)
+To use this function, we define variables (the model as we want it to run) and data (the object that contains our data).
 
 ```{r}
 mod2 <- MLPE(logDc.km ~ forest + ag + shrub + dev + (1|pop1), CSFdata)
@@ -218,9 +245,11 @@ mod5 <- MLPE(logDc.km ~ soils + slope + solarinsoz + (1|pop1), CSFdata)
 ```
 
 ### d) Compare evidence for models
+
 Note: package MuMIn will do this for you, but for this exercise it is useful to see all the pieces of what goes into your evaluation. 
 
 In information theory, we use information criteria (AIC, BIC) to evaluate the relative distance of our hypothesis from truth. For more information, see Burnham and Anderson (2002).
+
 ```{r}
 CSF.IC <- cbind(Model = c(1:5), 
                 AIC = c(AIC(mod1), AIC(mod2), AIC(mod3), 
@@ -232,14 +261,16 @@ CSF.IC
 
 We now have some results, great!
 
-Now we will work with these a bit. First, because we do not have an infinite number of samples, we will convert AIC to AICc.
+Now we will work with these a bit. First, because we do not have an infinite number of samples, we will convert AIC to AICc (which adds a small-sample correction to AIC).
 
 First, find the k parameters used in the model and add them to the table.
 
 ```{r}
 CSF.IC <- cbind(CSF.IC, 
-                k = c(attr(logLik(mod1), "df"), attr(logLik(mod2), "df"), 
-                      attr(logLik(mod3), "df"), attr(logLik(mod4), "df"), 
+                k = c(attr(logLik(mod1), "df"), 
+                      attr(logLik(mod2), "df"), 
+                      attr(logLik(mod3), "df"), 
+                      attr(logLik(mod4), "df"), 
                       attr(logLik(mod5), "df")))
 CSF.IC
 ```
@@ -300,6 +331,11 @@ confint(mod2, level = 0.95, method = "Wald")
 
 The estimates that overlap 0 do not have as much evidence of being important to gene flow, based on simulations in Row et al. (2017). So in this case, there is only strong evidence that agriculture influences the rate of gene flow. Note that because the metric is genetic distance, negative values indicate more gene flow.
 
+**NOTE HW: We dropped 'grass' to avoid multicollinearity. How can we be sure that 'grass' is not important?**
+
+**NOTE HW: Maybe intersperse the questions in the text where they fit? This could make the lab more engaging for users.**
+
+**NOTE HW: What is your take on (a) factor importance, and (b) estimating parameters by weighting across models? Maybe we could add a brief section 'multimodel inference' that uses functions from MuMIn to calculate model weights, factor importance and model-averaged estimates and CIs? It's up to you if you want this or not. If you think it's a good idea but we don't have the time now, we can add it later.**
 
 **Questions**:
 
