--- a/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
+++ b/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
@@ -50,6 +50,7 @@ All required packages should have been installed already when you installed 'Lan
 
 ```{r packages global_options, include=TRUE, results="hide", message=FALSE, warning=FALSE}
 library(LandGenCourse)
+library(ggplot2)
 #require(lme4)
 #require(usdm)
 ```
@@ -61,7 +62,7 @@ First, read in the dataset. It is named CSF (Columbia spotted frog) to different
 ```{r}
 CSFdata <- read.csv(system.file("extdata", "CSF_network.csv", 
                                         package = "LandGenCourse"))
-View(CSFdata) 
+head(CSFdata) 
 ```
 
 Take a look at the column names and make sure you and R agree on what everything is called, and on the data types (e.g., factor vs. character).
@@ -158,11 +159,13 @@ Numbers less than 10, or 3, or 4, depending on who you ask, are considered to no
 usdm::vif(cbind(CSF.df, grass=CSFdata$grass))
 ```
 
-**NOTE HW: I added the text and code below, though I see now that you meant this to be a question at the end. As we don't have a video to introduce the concepts for the lab, maybe a bit more explanation would be helpful?**
+**Question 1**:	Why would adding in the last land cover cause a high amount of collinearity? Consider how these data were calculated.
 
-Why is this? The variables 'forest', 'dev', 'shrub', 'ag' and 'grass' together cover almost all land cover types in the study area. Each is measured as percent area, and together, they make up 100% or close to 100% of the land cover types along each link. Thus if we know e.g. that all 'forest', 'dev', 'shrub' and 'ag' together cover 80% along a link, then it is a good bet that 'grass' will cover the remaining 20%. 
+**NOTE HW: I added the text and code below. As we don't have a video to introduce the concepts for the lab, maybe this additional explanation would be helpful?**
 
-Therefore, with composition data, we need to omit one variable to avoid multi-collinearity (where a variable is a linear combination of other variables), even though the pairwise correlations may be low. For example, there the variable 'grass' showed relatively low correlations with the other variables:
+The variables 'forest', 'dev', 'shrub', 'ag' and 'grass' together cover almost all land cover types in the study area. Each is measured as percent area, and together, they make up 100% or close to 100% of the land cover types along each link. Thus if we know e.g. that all 'forest', 'dev', 'shrub' and 'ag' together cover 80% along a link, then it is a good bet that 'grass' will cover the remaining 20%. 
+
+With such sets of compositional data, we need to omit one variable to avoid multi-collinearity (where a variable is a linear combination of other variables), even though the pairwise correlations may be low. For example, there the variable 'grass' showed relatively low correlations with the other variables:
 
 ```{r}
 cor(CSF.df, CSFdata$grass)
@@ -252,6 +255,8 @@ In information theory, we use information criteria (AIC, BIC) to evaluate the re
 
 **NOTE HW: See alternative code below, using named list of models.**
 
+**NOTE HW: In Week 6 worked example, we wrote: "The function ‘extractAIC’ refits the models with ‘REML=FALSE’ to obtain AIC values that are comparable between models with different fixed effects (though this does not apply here because the fixed effects were the same), or between models fitted with ‘lm’ and ‘lmer’." Should we use 'extractAIC' here, as we have different fixed effects in the models? 
+
 ```{r}
 #CSF.IC <- cbind(Model = c(1:5), 
 #                AIC = c(AIC(mod1), AIC(mod2), AIC(mod3), 
@@ -263,7 +268,9 @@ In information theory, we use information criteria (AIC, BIC) to evaluate the re
 # Alternative code HW:
 Models <- list(Full=mod1, Landcover=mod2, HumanFootprint=mod3, 
                EnergyConservation=mod4, Historical=mod5)
-CSF.IC <- data.frame(AIC = sapply(Models, AIC),BIC = sapply(Models, BIC)) 
+CSF.IC <- data.frame(extractAIC = sapply(Models, extractAIC)[2,], 
+                     AIC = sapply(Models, AIC),
+                     BIC = sapply(Models, BIC)) 
 CSF.IC
 ```
 
@@ -284,6 +291,7 @@ First, find the k parameters used in the model and add them to the table.
 CSF.IC <- data.frame(CSF.IC, k = sapply(Models, function(ls) attr(logLik(ls), "df")))
 CSF.IC
 ```
+**Question 2**:	How does k relate to the number of parameters in each model?
 
 Now, calculate AICc and add it to the dataframe:
 
@@ -300,9 +308,16 @@ Next we calculate evidence weights for each model based on AICc and BIC. These c
 
 Calculate model weights for AICc:
 
-**NOTE HW: Should 'AICew' be 'AICcew'?**
+**NOTE HW: Should the label be 'AICew' be 'AICcew'?**
+
+**NOTE HW: See above re 'extractAIC'. Do we need to use it here? I've added it just in case.**
 
 ```{r}
+extractAICmin <- min(CSF.IC$extractAIC)
+RL <- exp(-0.5*(CSF.IC$extractAIC - extractAICmin))
+sumRL <- sum(RL)
+CSF.IC$extractAICmin <- RL/sumRL
+
 AICcmin <- min(CSF.IC$AICc)
 RL <- exp(-0.5*(CSF.IC$AICc - AICcmin))
 sumRL <- sum(RL)
@@ -318,6 +333,7 @@ sumRL.B <- sum(RL.B)
 CSF.IC$BICew <- RL.B/sumRL.B
 round(CSF.IC,3)
 ```
+**Question 3**:	What did using AICc (rather than AIC) do to inference from these results?
 
 In the multi-model inference approach, we can look across all the models in the dataset and their evidence weights to better understand the system. Here we see that models 1 and 5 have very little evidence of being close to the truth, that model 4 has just a little more, and that models 2 and 3 can be seen as competing for which one is closest to truth, at least if you're looking at AIC. BIC imposes a larger penalty for additional parameters, so it has a larger distinction between these. Let's review what these models are:
 
@@ -326,6 +342,8 @@ In the multi-model inference approach, we can look across all the models in the 
 3.	**Human footprint model**: ag, dev
 4.	**Energy conservation model**: slope, shrub, dev
 5.	**Historical model**: soils, slope, solarinso
+
+### f) Confidence intervals for predictors based on single best model
 
 According to Row et al. (2017), we can use the confidence interval from the variables in the models to identify those that are contributing to landscape resistance. Looking at models 2 and 3, we have some evidence that shrub and forest cover matter, but it's not as strong as the evidence for ag and development. Let's look at the parameter estimates to understand more.
 
@@ -341,39 +359,105 @@ Now we'll estimate the 95% confidence interval for these estimates:
 confint(Models$Landcover, level = 0.95, method = "Wald")
 ```
 
-The estimates that overlap 0 do not have as much evidence of being important to gene flow, based on simulations in Row et al. (2017). So in this case, there is only strong evidence that agriculture influences the rate of gene flow. Note that because the metric is genetic distance, negative values indicate more gene flow.
+**NOTE HW: I suggest adding the following sencence: "In esssence, we here use the confidence intervals to approximate a statistical significance test."**
 
-**NOTE HW: We dropped 'grass' to avoid multicollinearity. How can we be sure that 'grass' is not important?**
+The confidence intervals that overlap 0 do not have as much evidence of being important to gene flow, based on simulations in Row et al. (2017). So in this case, there is only strong evidence that agriculture influences the rate of gene flow. Note that because the metric is genetic distance, negative values indicate more gene flow.
 
-**NOTE HW: Maybe intersperse the questions in the text where they fit? This could make the lab more engaging for users.**
+**Question 4**:	What evidence is there that shrub and forest matter to gene flow from these analyses? Would you include them in a conclusion about landscape resistance in this system?
 
-**NOTE HW: What is your take on (a) factor importance, and (b) estimating parameters by weighting across models? Maybe we could add a brief section 'multimodel inference' that uses functions from MuMIn to calculate model weights, factor importance and model-averaged estimates and CIs? It's up to you if you want this or not. If you think it's a good idea but we don't have the time now, we can add it later.**
+**Question 5**:  What evidence is there that development influences gene flow from these analyses? Would you include it in a conclusion about landscape resistance in this system?
+
+**NOTE HW: We dropped 'grass' to avoid multicollinearity. How can we be sure that 'grass' is not important? Should we add a question about this, or a note?**
 
 
+## 3. Optional: Model averaging
+
+**NOTE HW: What is your take on (a) factor importance, and (b) estimating parameters by weighting across models? I've drafted a brief section that uses functions from MuMIn to calculate model weights, factor importance and model-averaged estimates and CIs. It's up to you if you want to include this or not, and if so, please feel free to edit.**
+
+### a) Model selection with package 'MuMIn'
+
+The package MuMIn makes it easy to create a table for model comparison with the function 'model.sel'. With the argument `rank`, you can specify which criterion to use.
 
 ```{r}
-#Models.avg <- MuMIn::model.avg(Models, rank="AICc",
-#                               subset=cumsum(weight) <= .95)
-Models.avg <- MuMIn::model.avg(Models, rank="AICc",
-                               subset=delta < 4)
-Models.avg
-Models.avg$msTable
-Models.avg$coefficients
-Models.avg$coefArray
-Models.avg$importance
-confint(Models.avg)
+Models.table <- MuMIn::model.sel(Models, rank="AICc")
+Models.table
 ```
 
-**Questions**:
+Note: In the first few columns, the table lists, for each predictor in a model, its parameter estimate. This makes it easy to check to what degree the slope estimates depend on which other variables are in the model. 
 
-1.	Why would adding in the last land cover cause a high amount of collinearity? Consider how these data were calculated.
-2.	What did using AICc (rather than AIC) do to inference from these results?
-3.	How does k relate to the number of parameters in each model?
-4.	What evidence is there that shrub and forest matter to gene flow from these analyses? Would you include them in a conclusion about landscape resistance in this system?
-5.  What evidence is there that development influences gene flow from these analyses? Would you include it in a conclusion about landscape resistance in this system?
+### b) Select a subset of models for averaging
+
+We could take this one step further and estimate parameters and their confidence intervals not just from the best model but from a subset of models that have high model weights. Two commonly used definitions of such a subset include:
+
+- `subset=cumsum(weight) <= .95`: The subset of highest-ranked models that together account for at least 95% of model weights. 
+- `subset=delta < 4`: The subset of all models that have a delta value greater than 4. 
+
+```{r}
+Subset <- MuMIn::get.models(Models.table, cumsum(weight) <= .95)
+```
+
+Now we can estimate parameters as a weighted mean of the estimates from the models in the subset, with weights proportional to their model weight.
+
+```{r}
+Models.avg <- MuMIn::model.avg(Subset)
+Models.avg
+```
+We get two rows of coefficients. The naming is confusing, as both are calculated from the same subset of models as defined above. Here, subset refers to a subset of parameters, not models:
+
+- **full**: In each model, slope coefficients for predictors that are not included in the model are estimated to be zero and then included in the averaging across models.
+- **subset**: In each model, slope coefficients for predictors that are not included in the model are set to NA, i.e., these estimates are not included in the averaging. Thus, for each predictor, coefficient estimates are averaged only across those models that contain the predictor.  
+
+The model selection table now includes only the models in the subset, and the weights are adjusted accordingly (they will now sum to 1 for the subset):
+
+```{r}
+Models.avg$msTable
+```
+
+### c) Model-averaged confidence intervals for predictors
+
+In addition to averaging coeffient estimates, we can also get their confidence intervals as a weighted average across models. 
+
+Note: as with the coefficient estimates above, `full=FALSE` treats estimates for predictors not included in a model as NAs, whereas `full=FALSE` treats them as zeros.
+
+```{r}
+confint(Models.avg, full=FALSE, level = 0.95, method="Wald")
+confint(Models.avg, full=TRUE, level = 0.95, method="Wald")
+```
+
+**Question 7**:	How did model averaging affect the results and interpretation?
+
+### d) Quantify factor importance given a (sub)set of models
+
+Given the subset of models, we can get a measure of the importance of each predictor by summing the weights of all models that contain the predictor (see Week 7 video). 
+
+```{r}
+Models.avg$importance
+```
+
+Importance values will depend on the criterion used (e.g., AICc vs. BIC) and on the set or subset of models used. Here we plot importance values from the full set of models and from the subset (both were based on AICc). 
+
+Note: the function `importance` returns an object of class 'importance'. A simple way to extact the values as a named vector is to use the function `c()`. This can then be plotted with the generic function `barplot`. 
+
+```{r fig.show="hold", fig.width=8, fig.height=4}
+par(mfrow=c(1,2))
+barplot(c(Models.avg$importance), main="Subset of models", 
+        las=2, ylim=c(0,1), ylab="Importance")
+Importance <- MuMIn::model.avg(Models.table)$importance
+barplot(c(Importance), main="All models", las=2, ylim=c(0,1))
+```
+
+Or with `ggplot2`:
+
+```{r}
+Res <- c(Importance)
+ggplot() + aes(x=reorder(names(Res), -Res), y=Res) +
+  geom_bar(stat="identity") + xlab("") + ylab("Importance")
+```
+
+**Question 8**:	How does factor importance relate to model weights? What would you consider an 'important' predictor?
 
 
-## 3. Your turn to test additional hypotheses!
+## 4. Your turn to test additional hypotheses!
 
 Create your own (small) set of hypotheses to rank for evidence using the dataset provided. Modify the code above to complete the following steps: 
 
