--- a/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
+++ b/vignettes/Week12_Model_Selection/Week12_vignette.Rmd
@@ -27,7 +27,7 @@ In previous labs, you have created genetic distance matrices, so here we are goi
 
 Here's a map of the study area. The lines represent those pair-wise links between sampling locations that we will be considering here (graph model: Delaunay triangulation).
 
-![Map of study area](Capture.png)
+![Map of study area](WE12_Fig1.png)
 
 Each row in the file 'CSF_network.csv' represents a link between two pairs of sampling locations. The columns contain the following variables:
 
